--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -100,4 +100,12 @@
             android:textSize="16sp" />
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/versionTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_centerHorizontal="false"
+        android:text="Version 1.3.0" />
+
 </LinearLayout>
