--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#181d2f</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#fe9600</color>
+    <color name="colorAccent">#181d2f</color>
 </resources>
