--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,198 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="5dp"
-    android:padding="5dp"
-    android:layout_marginTop="10dp"
+    android:padding="16dp"
     tools:context=".Fragments.ProfileFragment">
 
-    <!-- Welcome Text -->
+    <!-- Welcome Message and First Name -->
     <TextView
         android:id="@+id/welcomeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome"
+        android:textSize="22sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginTop="16dp"
+        android:gravity="start"
+        android:layout_marginStart="1dp" />
+
+
+    <TextView
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Welcome"
-        android:textSize="17sp"
-        android:contentDescription="Welcome" />
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimaryDark"
+        android:text=""
+        app:layout_constraintTop_toBottomOf="@id/welcomeText"
+        android:gravity="start"/>
 
-   <!-- FrameLayout to overlay credit card image and text -->
-    <FrameLayout
-        android:id="@+id/creditCardContainer"
-        android:layout_width="383dp"
-        android:layout_height="217dp"
-        android:layout_below="@id/name"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="16dp"
-        android:layout_weight="1">
+    <!-- Box containing Account Name and Balance -->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/accountDetailsCard"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="25dp"
+        app:cardBackgroundColor="@android:color/white"
+        app:contentPadding="2dp"
+        app:cardMaxElevation="5dp"
+        app:cardElevation="12dp"
+        app:cardUseCompatPadding="true"
+        android:layout_marginTop="2dp">
 
-        <!-- Credit Card Image -->
-        <ImageView
-            android:id="@+id/creditCardImage"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/baseline_credit_card_24" />
-
-        <!-- Credit Card Text Overlay -->
         <LinearLayout
+            android:id="@+id/accountDetailsLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="17sp"
-                android:contentDescription="Logged in user Name" />
-
-            <TextView
-                android:id="@+id/ceditcardText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Account Summary"
-                android:textSize="16sp"
-                android:layout_marginTop="80dp"
-                android:contentDescription="Account Summary" />
-            <TextView
-                android:id="@+id/accountName"
+                android:id="@+id/accountNumberLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="16sp"
-                android:contentDescription="Selected Account Name" />
+                android:text="Account Number :"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp" />
 
+            <!-- Account Name -->
+            <TextView
+                android:id="@+id/accountNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp" />
+
+
+            <TextView
+                android:id="@+id/accountNameLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Account Type:"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp" />
+
+            <!-- Account Name -->
+            <TextView
+                android:id="@+id/accountTypeName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:layout_marginTop="5dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/balanceLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Balance :"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="16sp" />
+
+            <!-- Balance -->
             <TextView
                 android:id="@+id/balance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text=""
                 android:layout_marginTop="5dp"
-                android:textSize="16sp"
-                android:contentDescription="Selected Account Balance" />
+                android:textColor="#006400"
+                android:textSize="20sp" />
         </LinearLayout>
-    </FrameLayout>
-
+    </androidx.cardview.widget.CardView>
 
     <!-- Select Account Text -->
     <TextView
         android:id="@+id/selectAccountText"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Select Account :"
+        android:text="      Account Selection :"
         android:textSize="16sp"
-        android:layout_below="@id/creditCardContainer"
+        android:textColor="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@id/accountDetailsCard"
+        android:gravity="left"
         android:layout_marginTop="16dp" />
 
-    <!-- Wrap the Spinner with CardView -->
+    <!-- Spinner with CardView -->
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/accountSpinnercard"
-        android:layout_margin="16dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:layout_below="@id/selectAccountText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/selectAccountText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp">
 
         <Spinner
             android:id="@+id/accountSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"/>
+            android:prompt="@string/select_account_prompt"
+            android:padding="10dp" />
     </androidx.cardview.widget.CardView>
-
 
     <!-- Transaction List -->
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_fragment_container"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_below="@+id/accountSpinnercard"
-        android:foreground="?android:attr/selectableItemBackground">
+        app:layout_constraintTop_toBottomOf="@+id/accountSpinnercard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp">
+
         <!-- Scrollable view for Transaction List -->
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <!-- TableLayout for Transactions -->
             <TableLayout
                 android:id="@+id/tableLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/profile_fragment_container"
-                android:layout_marginTop="16dp"
                 android:divider="?android:attr/dividerVertical"
-                android:showDividers="middle">     </TableLayout>
+                android:showDividers="middle">
 
-
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/divider_background">
-
-
-                <TextView
-                    android:layout_width="0dp"
+                <!-- TableRow for Column Headers -->
+                <TableRow
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:layout_weight="3"
-                    android:text="Description"
-                    android:paddingLeft="6dp"
-                    android:layout_marginBottom="10dp"
-                    android:textStyle="bold" />
+                    android:background="@drawable/divider_background">
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:text="Amount"
-                    android:paddingLeft="6dp"
-                    android:layout_marginBottom="10dp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:text="Description"
+                        android:padding="6dp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:paddingLeft="6dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="Balance"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Amount"
+                        android:padding="6dp"
+                        android:textStyle="bold" />
 
-            </TableRow>
-
-
-        </FrameLayout>
-
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Balance"
+                        android:padding="6dp"
+                        android:textStyle="bold" />
+                </TableRow>
+            </TableLayout>
         </ScrollView>
-
     </androidx.cardview.widget.CardView>
 
     <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_navigation_menu" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
