--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -122,9 +122,19 @@
         android:textColor="@color/colorAccent"
         app:layout_constraintTop_toBottomOf="@id/accountDetailsCard"
         android:gravity="left"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="25dp" />
 
-    <!-- Spinner with CardView -->
+
+    <TextView
+        android:id="@+id/progressTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Downloading transactions..."
+        android:visibility="invisible"
+        app:layout_constraintTop_toBottomOf="@+id/accountDetailsCard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/accountSpinnercard"
         android:layout_width="0dp"
