--- a/app/src/main/res/layout/activity_constants_edit.xml
+++ b/app/src/main/res/layout/activity_constants_edit.xml
@@ -49,7 +49,7 @@
                     android:id="@+id/cancelBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/editTextMockUrl"
+                    android:layout_below="@id/resetBtn"
                     android:layout_marginTop="16dp"
                     android:text="Cancel"
                     android:textAllCaps="false"
@@ -61,9 +61,9 @@
                     android:id="@+id/saveBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/cancelBtn"
+                    android:layout_below="@id/editTextMockUrl"
                     android:layout_marginTop="16dp"
-                    android:text="Save"
+                    android:text="Save Changes"
                     android:textAllCaps="false"
                     android:textColor="#fff"
                     android:textSize="16sp"
@@ -78,4 +78,27 @@
             android:text=" The configuration screen is only required when using a custom Digital Bank host / Mock service. These settings do not normally need to be changed."
             android:contentDescription="Note:  The configuration screen can be used to use a custom Digital Bank host and or Mock service. These settings do not normally need to be changed." />
 
+        <Button
+            android:id="@+id/restartBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ConfigDescription"
+            android:layout_marginTop="16dp"
+            android:text="Apply Change"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            android:textSize="16sp"
+            android:contentDescription="Restart" />
+
+        <Button
+            android:id="@+id/resetBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/restartBtn"
+            android:layout_marginTop="16dp"
+            android:text="Reset To Default"
+            android:textAllCaps="false"
+            android:textColor="#fff"
+            android:textSize="16sp"
+            android:contentDescription="Reset" />
 </RelativeLayout>
