--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -7,20 +7,11 @@
     <!-- Add your PNG file as an ImageView -->
     <ImageView
         android:id="@+id/toolbar_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/dblogo_small"
-        android:layout_alignParentLeft="true"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/outline_account_circle_24"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
 
-    <!-- Add the rest of your ActionBar items as needed -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/my_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>
 </RelativeLayout>
