--- a/app/src/main/res/layout/atm_search.xml
+++ b/app/src/main/res/layout/atm_search.xml
@@ -8,6 +8,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".atm_search">
+
+    <include
+        android:id="@+id/action_bar"
+        layout="@layout/action_bar"/>
+
+
     <RelativeLayout
         android:id="@+id/atm_buttons"
         android:layout_width="match_parent"
