--- a/app/src/main/res/layout/your_transfer_screen_layout.xml
+++ b/app/src/main/res/layout/your_transfer_screen_layout.xml
@@ -6,6 +6,10 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <include
+        android:id="@+id/action_bar"
+        layout="@layout/action_bar"/>
+
     <!-- Header: Account for Deposit -->
     <TextView
         android:layout_width="match_parent"
