--- a/app/src/main/res/layout/fragment_atm_search.xml
+++ b/app/src/main/res/layout/fragment_atm_search.xml
@@ -7,6 +7,7 @@ xmlns:tools="http://schemas.android.com/tools"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/atm_root_layout"
     tools:context=".atm_search">
 
 
