--- a/app/src/main/res/layout/your_dashboard_layout.xml
+++ b/app/src/main/res/layout/your_dashboard_layout.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/dashboard_root_layout">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/action_bar"
@@ -16,7 +17,7 @@
             android:id="@+id/toolbar_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/outline_account_circle_24"
+            android:src="@drawable/outline_more_vert_24"
             android:layout_gravity="end"
             android:layout_marginEnd="16dp"/>
 
