--- a/app/src/main/res/layout/your_transfer_screen_layout.xml
+++ b/app/src/main/res/layout/your_transfer_screen_layout.xml
@@ -1,14 +1,31 @@
 <!-- res/layout/your_transfer_screen_layout.xml -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/transfer_root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <include
+
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/action_bar"
-        layout="@layout/action_bar"/>
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/transparent"
+        android:elevation="4dp"
+        android:gravity="end"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
+        <ImageView
+            android:id="@+id/toolbar_image"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/outline_more_vert_24"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"/>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <!-- Header: Account for Deposit -->
     <TextView
