--- a/app/src/main/res/layout/your_dashboard_layout.xml
+++ b/app/src/main/res/layout/your_dashboard_layout.xml
@@ -1,9 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dashboard_root_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/dashboard_root_layout">
+    android:layout_height="match_parent">
 
+    <!-- Toolbar -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/action_bar"
         android:layout_width="match_parent"
@@ -17,34 +18,35 @@
             android:id="@+id/toolbar_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/outline_more_vert_24"
             android:layout_gravity="end"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/outline_more_vert_24" />
 
     </androidx.appcompat.widget.Toolbar>
 
+    <!-- Optional header text -->
     <TextView
         android:id="@+id/account_balance_summary_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/action_bar"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="16dp"
-        android:contentDescription="Account Balance Summary Chart"
-        android:text="  Account Balance Summary"
+        android:text="  Financial Dashboard"
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <!-- Content area -->
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/account_balance_summary_text">
 
-
-        <com.anychart.AnyChartView
-            android:id="@+id/Any_chart_view"
+        <!-- ✅ WebView replaces AnyChartView -->
+        <WebView
+            android:id="@+id/webView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
             tools:visibility="visible" />
 
         <!-- ProgressBar for loading indicator -->
@@ -54,8 +56,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
 
-
     </FrameLayout>
-
 
 </RelativeLayout>
