--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/actionBar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:gravity="center_vertical">
-
-
-</RelativeLayout>
+    android:background="?attr/colorPrimary"
+    android:elevation="4dp"
+    android:theme="?attr/actionBarTheme"
+    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    android:gravity="center_vertical"
+    android:layout_marginTop="0dp" />
