--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -28,7 +28,8 @@
     <item
         android:id="@+id/action_logout"
         android:title="Logout"
-        android:icon="@drawable/outline_logout_24" />
+        android:icon="@drawable/outline_logout_24"
+        android:visible="true" />
 
 
 </menu>
